# cockroach_migrate_tool

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES  flake.nix  replay_repo_history.sh
.codex/: config.toml
.github/: AGENTS.md
.github/workflows/: image-catalog.yml  master-image.yml  nix-ci.yml  promote-image-tags.yml  publish-images.yml
.ralph/: current_task.txt  current_tasks.md  current_tasks_done.md  email.sh  flake_show.json  ralph-choose-task.md  ralph-do-task.md  ralph-worker.sh  ralph.sh  task_history.txt
.ralph/progress/: 100.jsonl  101.jsonl  102.jsonl  103.jsonl  104.jsonl  105.jsonl  106.jsonl  107.jsonl  108.jsonl  109.jsonl  110.jsonl  111.jsonl  112.jsonl  113.jsonl  114.jsonl  115.jsonl  116.jsonl  117.jsonl  118.jsonl  119.jsonl  120.jsonl  121.jsonl  122.jsonl  123.jsonl  124.jsonl  125.jsonl  (+121 more)
crates/runner/: Cargo.toml
crates/runner-config/: Cargo.toml
crates/runner-config/src/: destination_catalog.rs  error.rs  lib.rs  sql_name.rs  startup_plan.rs  validated_config.rs  validated_schema.rs
crates/runner-config/src/config/: mod.rs
crates/runner/src/: config.rs  destination_catalog.rs  error.rs  helper_plan.rs  lib.rs  main.rs  metrics.rs  postgres.rs  postgres_bootstrap.rs  postgres_setup.rs  reconcile.rs  runtime_plan.rs  sql_name.rs  tracking_state.rs  validated_schema.rs  webhook.rs
crates/runner/src/config/: mod.rs  parser.rs
crates/runner/src/cutover_readiness/: mod.rs
crates/runner/src/molt_verify/: mod.rs
crates/runner/src/reconcile_runtime/: delete.rs  metrics_snapshot.rs  mod.rs  upsert.rs
crates/runner/src/schema_compare/: cockroach_export.rs  mod.rs  postgres_export.rs  report.rs
crates/runner/src/webhook_runtime/: mod.rs  payload.rs  persistence.rs  routing.rs  tracking.rs
crates/runner/tests/: bootstrap_contract.rs  ci_contract.rs  cli_contract.rs  config_contract.rs  contributor_docs_contract.rs  cutover_readiness_contract.rs  default_bootstrap_long_lane.rs  dependency_policy_contract.rs  e2e_integrity_contract.rs  helper_plan_contract.rs  image_contract.rs  long_lane.rs  novice_registry_only_contract.rs  operator_cli_surface_contract.rs  readme_contract.rs  readme_operator_surface_contract.rs  reconcile_contract.rs  schema_compare_contract.rs  setup_sql_script_contract.rs  tls_reference_contract.rs  verify_contract.rs  verify_image_contract.rs  verify_job_result_contract.rs  verify_source_contract.rs  webhook_contract.rs
crates/runner/tests/fixtures/: container-runner-config.yml  invalid-runner-config.yml  readme-runner-config.yml  valid-runner-config.yml
crates/runner/tests/fixtures/certs/: server.crt  server.key
crates/runner/tests/fixtures/certs/mtls/: server.crt
crates/runner/tests/fixtures/setup_sql_scripts/: ca.crt  cockroach-all-setup.expected.sql  cockroach-demo_a-merged.expected.sql  cockroach-demo_a-setup.expected.sql  cockroach-demo_b-setup.expected.sql  cockroach-multi-database-config.yml  cockroach-setup-config.yml  invalid-cockroach-config.yml  invalid-postgres-config.yml  postgres-app_a-deduped.expected.sql  postgres-app_a-grants.expected.sql  postgres-dedup-config.yml  postgres-grants-config.yml
crates/runner/tests/support/: assert_cmd.rs  ca_cert_encoding.rs  compose_artifact_contract.rs  composite_pk_exclusion_harness.rs  default_bootstrap_harness.rs  destination_lock.rs  destination_write_failure.rs  docker_image_container_harness.rs  e2e_harness.rs  e2e_integrity.rs  e2e_integrity_contract_support.rs  github_workflow_contract.rs  host_process_runner.rs  host_process_runner_failure.rs  host_process_runner_ingest.rs  host_process_runner_paths.rs  image_build_target_contract.rs  mod.rs  multi_mapping_harness.rs  nix_image_artifact_harness.rs  novice_registry_only_harness.rs  operator_cli_surface.rs  predicates.rs  published_image_contract.rs  published_image_refs.rs  published_runtime_artifact_contract.rs  readme_contract.rs  readme_operator_surface.rs  readme_operator_workspace.rs  readme_public_image_workspace.rs  readme_published_image_contract.rs  repo_license_contract.rs  runner_container_process.rs  runner_docker_contract.rs  runner_image_artifact_harness.rs  runner_image_harness.rs  runner_process.rs  runner_public_contract.rs  rust_workspace_image_cache_contract.rs  test_postgres.rs  (+7 more)
crates/source-bootstrap/: Cargo.toml  Dockerfile
crates/source-bootstrap/src/: config.rs  error.rs  lib.rs  main.rs  render.rs
crates/source-bootstrap/src/config/: mod.rs  parser.rs
crates/source-bootstrap/tests/: bootstrap_contract.rs  cli_contract.rs  image_contract.rs
crates/source-bootstrap/tests/fixtures/: invalid-source-bootstrap-config.yml  readme-source-bootstrap-config.yml  valid-source-bootstrap-config.yml
crates/source-bootstrap/tests/support/: readme_contract.rs  source_bootstrap_image_contract.rs  source_bootstrap_image_harness.rs
docs/: tls-configuration.md
nix/: runner-build.nix  runner-test.nix
openapi/: verify-service.yaml
scripts/: README.md  dev-with-docker  generate-cockroach-setup-sql.sh  generate-postgres-grants-sql.sh  nix_ci_artifacts.py
(+821 files in other folders)
