[workspace]
members = ["crates/ingest-contract", "crates/runner", "crates/setup-sql"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false
rust-version = "1.93"

[workspace.dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive"] }
http-body-util = "0.1.3"
hyper = "1.9.0"
hyper-util = { version = "0.1.20", features = ["http1", "http2", "server", "service", "tokio"] }
rustls = { version = "0.23.34", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
