[package]
name = "runner-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
operator-log = { path = "../operator-log" }
serde.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
