[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
ingest-contract = { path = "../ingest-contract" }
operator-log = { path = "../operator-log" }
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
base64 = "0.22.1"
percent-encoding = "2.3.2"
predicates = "3.1.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3.23.0"
