[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
hyper-util.workspace = true
ingest-contract = { path = "../ingest-contract" }
operator-log = { path = "../operator-log" }
runner-config = { path = "../runner-config" }
rustls.workspace = true
rustls-pemfile.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
http-body-util.workspace = true
hyper.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_yaml.workspace = true
tempfile = "3.23.0"
