[package]
name = "source-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
clap.workspace = true
ingest-contract = { path = "../ingest-contract" }
percent-encoding = "2.3.2"
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
